[package]
name = "cait-sith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# core functionalities
rsteam = "0.2.1"
howlongtobeat = "0.5.2"
tokio = "1.34.0"

# data management and storage
reqwest = { version = "0.11.22", features = ["blocking", "gzip", "deflate", "brotli"] }
rusqlite = "0.30.0"
serde = "1.0.193"
serde_json = "1.0.108"

argh = "0.1.12"

